--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="menu-grid">
                     <article class="menu-card">
                         <img src="image/Ndole.jpg" 
-                             srcset="image/Ndole-400.webp 400w, image/Ndole-800.webp 800w"
+                             srcset="image/Ndole-400.webp 400w"
                              sizes="(max-width: 600px) 400px, 800px"
                              alt="Ndolè aux crevettes avec arachides" 
                              loading="lazy"
@@ -57,7 +57,7 @@
 
                     <article class="menu-card">
                         <img src="image/eru.jpg" 
-                             srcset="image/eru-400.webp 400w, image/eru-800.webp 800w"
+                             srcset="image/eru-400.webp 400w"
                              sizes="(max-width: 600px) 400px, 800px"
                              alt="Eru (Foli) avec viande et crevettes" 
                              loading="lazy"
@@ -74,7 +74,7 @@
 
                     <article class="menu-card">
                         <img src="image/poulet.jpg" 
-                             srcset="image/poulet-400.webp 400w, image/poulet-800.webp 800w"
+                             srcset="image/poulet-400.webp 400w"
                              sizes="(max-width: 600px) 400px, 800px"
                              alt="Poulet DG sauté aux légumes et plantain" 
                              loading="lazy"
@@ -91,7 +91,7 @@
 
                     <article class="menu-card">
                         <img src="image/okok.jpg" 
-                             srcset="image/okok-400.webp 400w, image/okok-800.webp 800w"
+                             srcset="image/okok-400.webp 400w"
                              sizes="(max-width: 600px) 400px, 800px"
                              alt="Okok avec huile de palme" 
                              loading="lazy"
@@ -124,3 +124,4 @@
     </footer>
 </body>
 </html>
+
